--- a/module2/index.html
+++ b/module2/index.html
@@ -1,31 +1,58 @@
-<!DOCTYPE html>
+<!doctype >
+	<!DOCTYPE html>
 	<html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css" href="c.css">
 		
 		<title>Assignment Solution for Module 2 </title>
-		<link rel="stylesheet" href="css/stylesheet.css">
 	</head>
+
 	<body>
-		<h1> Our Menu </h1>
-		<div class="div1" id="Chicken">
-			<p id ="ch">Chicken</p>
-			<div class="div2">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit , sed do eiusmod tempor incididunt ut labore et dolore magna aliqua .Ut enim ad minim veniam , quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-			</div>
-		</div>
+	<div class="row">
+		<h1>Our Menu </h1>
 	
-	<div class="div1" id="beef">
-			<p id ="be">Beef</p>
-			<div class="div2">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit , sed do eiusmod tempor incididunt ut labore et dolore magna aliqua .Ut enim ad minim veniam , quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-			</div>
+		<div id ="div1">
+			<section>
+		<div  class="title" id="chicken">
+			chiken
+			
 		</div>
-		<div class="div1" id="sushi">
-			<p id ="su">Sushi</p>
-			<div class="div2">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit , sed do eiusmod tempor incididunt ut labore et dolore magna aliqua .Ut enim ad minim veniam , quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-			</div>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. 
+		</p>
+		</section>
 		</div>
+		
+		
+	
+		<div id ="div2">
+			<section>
+		<div class="title" id="sushi">
+			sushi
+			
+		</div>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. 
+		</p>
+		</section>
+
+		</div>
+		
+	
+		<div id ="div3">
+			<section>
+		<div  class="title" id="beef">
+			beef
+			
+		</div>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. 
+		</p>
+		</section>
+		</div>
+			
+	</div>
 	</body>
 	</html>
